# serializer version: 1
# name: test_workflows_ci[docs-coverage]
  '''
  name: CI
  
  on:
    push:
      branches:
        - main
    pull_request:
  
  concurrency:
    group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
    cancel-in-progress: ${{ github.event_name == 'pull_request' }}
  
  jobs:
    ci:
      name: Test (Python ${{ matrix.python-version }})
      runs-on: ubuntu-latest
      strategy:
        fail-fast: false
        matrix:
          python-version:
            - '3.10'
            - '3.11'
            - '3.12'
            - '3.13'
            - '3.14'
      steps:
        - name: 💾 Check out repository
          uses: actions/checkout@v6
  
        - name: 🪪 Configure git identity for tests
          run: |
            git config --global user.name "github-actions[bot]"
            git config --global user.email "github-actions[bot]@users.noreply.github.com"
  
        - name: 🦀 Set up Python project with uv
          uses: astral-sh/setup-uv@v7
          with:
            enable-cache: true
            python-version: ${{ matrix.python-version }}
  
        - name: 🐍 Install dependencies
          run: uv sync
  
        - name: 📐 Lint
          run: uv run poe lint
  
        - name: 🔥 Test
          run: uv run poe test
  
        - name: 🔍 Collect coverage results
          run: uv run coverage xml
          if: ${{ matrix.python-version == '3.14' }}
  
        - name: 📊 Upload coverage to Codecov
          uses: codecov/codecov-action@v6
          if: ${{ matrix.python-version == '3.14' }}
          with:
            fail_ci_if_error: true
  
    docs:
      name: Documentation
      runs-on: ubuntu-latest
      steps:
        - name: 💾 Check out repository
          uses: actions/checkout@v6
          with:
            fetch-depth: 0
  
        - name: 🦀 Set up Python project with uv
          uses: astral-sh/setup-uv@v7
          with:
            enable-cache: true
            python-version: '3.14'
  
        - name: 🐍 Install dependencies
          run: uv sync
  
        - name: 📖 Build documentation
          run: uv run poe docs-build
  
    gitleaks:
      name: Secret scan
      runs-on: ubuntu-latest
      permissions:
        contents: read
      steps:
        - name: 💾 Check out repository
          uses: actions/checkout@v6
          with:
            fetch-depth: 0
  
        - name: 🔍 Check for secrets
          uses: gitleaks/gitleaks-action@v2
          env:
            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
  
  '''
# ---
# name: test_workflows_ci[docs-no_coverage]
  '''
  name: CI
  
  on:
    push:
      branches:
        - main
    pull_request:
  
  concurrency:
    group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
    cancel-in-progress: ${{ github.event_name == 'pull_request' }}
  
  jobs:
    ci:
      name: Test (Python ${{ matrix.python-version }})
      runs-on: ubuntu-latest
      strategy:
        fail-fast: false
        matrix:
          python-version:
            - '3.10'
            - '3.11'
            - '3.12'
            - '3.13'
            - '3.14'
      steps:
        - name: 💾 Check out repository
          uses: actions/checkout@v6
  
        - name: 🪪 Configure git identity for tests
          run: |
            git config --global user.name "github-actions[bot]"
            git config --global user.email "github-actions[bot]@users.noreply.github.com"
  
        - name: 🦀 Set up Python project with uv
          uses: astral-sh/setup-uv@v7
          with:
            enable-cache: true
            python-version: ${{ matrix.python-version }}
  
        - name: 🐍 Install dependencies
          run: uv sync
  
        - name: 📐 Lint
          run: uv run poe lint
  
        - name: 🔥 Test
          run: uv run poe test
  
    docs:
      name: Documentation
      runs-on: ubuntu-latest
      steps:
        - name: 💾 Check out repository
          uses: actions/checkout@v6
          with:
            fetch-depth: 0
  
        - name: 🦀 Set up Python project with uv
          uses: astral-sh/setup-uv@v7
          with:
            enable-cache: true
            python-version: '3.14'
  
        - name: 🐍 Install dependencies
          run: uv sync
  
        - name: 📖 Build documentation
          run: uv run poe docs-build
  
    gitleaks:
      name: Secret scan
      runs-on: ubuntu-latest
      permissions:
        contents: read
      steps:
        - name: 💾 Check out repository
          uses: actions/checkout@v6
          with:
            fetch-depth: 0
  
        - name: 🔍 Check for secrets
          uses: gitleaks/gitleaks-action@v2
          env:
            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
  
  '''
# ---
# name: test_workflows_ci[no_docs-coverage]
  '''
  name: CI
  
  on:
    push:
      branches:
        - main
    pull_request:
  
  concurrency:
    group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
    cancel-in-progress: ${{ github.event_name == 'pull_request' }}
  
  jobs:
    ci:
      name: Test (Python ${{ matrix.python-version }})
      runs-on: ubuntu-latest
      strategy:
        fail-fast: false
        matrix:
          python-version:
            - '3.10'
            - '3.11'
            - '3.12'
            - '3.13'
            - '3.14'
      steps:
        - name: 💾 Check out repository
          uses: actions/checkout@v6
  
        - name: 🪪 Configure git identity for tests
          run: |
            git config --global user.name "github-actions[bot]"
            git config --global user.email "github-actions[bot]@users.noreply.github.com"
  
        - name: 🦀 Set up Python project with uv
          uses: astral-sh/setup-uv@v7
          with:
            enable-cache: true
            python-version: ${{ matrix.python-version }}
  
        - name: 🐍 Install dependencies
          run: uv sync
  
        - name: 📐 Lint
          run: uv run poe lint
  
        - name: 🔥 Test
          run: uv run poe test
  
        - name: 🔍 Collect coverage results
          run: uv run coverage xml
          if: ${{ matrix.python-version == '3.14' }}
  
        - name: 📊 Upload coverage to Codecov
          uses: codecov/codecov-action@v6
          if: ${{ matrix.python-version == '3.14' }}
          with:
            fail_ci_if_error: true
  
  
    gitleaks:
      name: Secret scan
      runs-on: ubuntu-latest
      permissions:
        contents: read
      steps:
        - name: 💾 Check out repository
          uses: actions/checkout@v6
          with:
            fetch-depth: 0
  
        - name: 🔍 Check for secrets
          uses: gitleaks/gitleaks-action@v2
          env:
            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
  
  '''
# ---
# name: test_workflows_ci[no_docs-no_coverage]
  '''
  name: CI
  
  on:
    push:
      branches:
        - main
    pull_request:
  
  concurrency:
    group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
    cancel-in-progress: ${{ github.event_name == 'pull_request' }}
  
  jobs:
    ci:
      name: Test (Python ${{ matrix.python-version }})
      runs-on: ubuntu-latest
      strategy:
        fail-fast: false
        matrix:
          python-version:
            - '3.10'
            - '3.11'
            - '3.12'
            - '3.13'
            - '3.14'
      steps:
        - name: 💾 Check out repository
          uses: actions/checkout@v6
  
        - name: 🪪 Configure git identity for tests
          run: |
            git config --global user.name "github-actions[bot]"
            git config --global user.email "github-actions[bot]@users.noreply.github.com"
  
        - name: 🦀 Set up Python project with uv
          uses: astral-sh/setup-uv@v7
          with:
            enable-cache: true
            python-version: ${{ matrix.python-version }}
  
        - name: 🐍 Install dependencies
          run: uv sync
  
        - name: 📐 Lint
          run: uv run poe lint
  
        - name: 🔥 Test
          run: uv run poe test
  
  
    gitleaks:
      name: Secret scan
      runs-on: ubuntu-latest
      permissions:
        contents: read
      steps:
        - name: 💾 Check out repository
          uses: actions/checkout@v6
          with:
            fetch-depth: 0
  
        - name: 🔍 Check for secrets
          uses: gitleaks/gitleaks-action@v2
          env:
            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
  
  '''
# ---
# name: test_workflows_release[no_pypi]
  '''
  name: Release
  
  on:
    push:
      tags:
        - v[0-9]*.[0-9]*
  
  jobs:
    build:
      name: Build distribution
      runs-on: ubuntu-latest
      steps:
        - name: 💾 Check out repository
          uses: actions/checkout@v6
          with:
            fetch-depth: 0
  
        - name: 🦀 Set up Python project with uv
          uses: astral-sh/setup-uv@v7
          with:
            enable-cache: true
            python-version: '3.14'
  
        - name: 📦 Build package
          run: uv build
  
        - name: 🔼 Upload artifact
          uses: actions/upload-artifact@v7
          with:
            name: dist
            path: dist/
  
    release:
      name: Create GitHub release
      needs: build
      runs-on: ubuntu-latest
      permissions:
        contents: write
      steps:
        - name: 💾 Check out repository
          uses: actions/checkout@v6
          with:
            fetch-depth: 0
  
        - name: 🔽 Download artifact
          uses: actions/download-artifact@v8
          with:
            name: dist
            path: dist/
  
        - name: 🏷️ Create GitHub release
          run: gh release create ${{ github.ref_name }} dist/* --generate-notes
          env:
            GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
  
  '''
# ---
# name: test_workflows_release[pypi]
  '''
  name: Release
  
  on:
    push:
      tags:
        - v[0-9]*.[0-9]*
  
  jobs:
    build:
      name: Build distribution
      runs-on: ubuntu-latest
      steps:
        - name: 💾 Check out repository
          uses: actions/checkout@v6
          with:
            fetch-depth: 0
  
        - name: 🦀 Set up Python project with uv
          uses: astral-sh/setup-uv@v7
          with:
            enable-cache: true
            python-version: '3.14'
  
        - name: 📦 Build package
          run: uv build
  
        - name: 🔼 Upload artifact
          uses: actions/upload-artifact@v7
          with:
            name: dist
            path: dist/
  
    release:
      name: Create GitHub release
      needs: build
      runs-on: ubuntu-latest
      permissions:
        contents: write
      steps:
        - name: 💾 Check out repository
          uses: actions/checkout@v6
          with:
            fetch-depth: 0
  
        - name: 🔽 Download artifact
          uses: actions/download-artifact@v8
          with:
            name: dist
            path: dist/
  
        - name: 🏷️ Create GitHub release
          run: gh release create ${{ github.ref_name }} dist/* --generate-notes
          env:
            GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
  
    publish:
      name: Publish to PyPI
      needs: build
      runs-on: ubuntu-latest
      environment:
        name: pypi
        url: https://pypi.org/project/PKFire/
      permissions:
        id-token: write
        attestations: write
      steps:
        - name: 🔽 Download artifact
          uses: actions/download-artifact@v8
          with:
            name: dist
            path: dist/
  
        - name: ☢️ Publish to PyPI
          uses: pypa/gh-action-pypi-publish@release/v1
          with:
            attestations: true
  
  '''
# ---
